# net_swimmer

./: CMakeLists.txt  README.md  encoding_chirps.txt  ideas.txt
include/: mail_home.h
net_swimmer_embedded/net_swimmer/: CMakeLists.txt  launch_swimmer.bat  requirements.txt
net_swimmer_embedded/net_swimmer/assets/: tracker_payload.js
net_swimmer_embedded/net_swimmer/data/: js_data_0002.json
net_swimmer_embedded/net_swimmer/include/: blob_transport.h  chirp_encoder.h  crypto_utils.h  embedded_js.h  fetch_js_blob.h  http_client.h  mail_home.h  task_parser.h  tor_launcher.h  util.h
net_swimmer_embedded/net_swimmer/scripts/: chirp_encode_bot.py  main.cpp
net_swimmer_embedded/net_swimmer/src/: blob_transport.cpp  crypto_utils.cpp  embedded_js.cpp  fetch_js_blob.cpp  http_client.cpp  json_to_chirp.cpp  mail_home.cpp  main.cpp  squirt_encoder.cpp  task_parser.cpp
showsome.skin/: chirp_decoder.py  report_server.py
src/: mail_home.cpp  main.cpp  tor_launcher.cpp  util.cpp
temp/: fren_swimmer.cpp  launch_swimmer.bat  mail_home.cpp  proxy_loader.cpp  proxy_loader.h  run_proxy_scan.bat
tor/: torrc
